--- a/Project/composer.json
+++ b/Project/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "dimsav/laravel-translatable": "7.*",
         "laravel/framework": "5.4.*",
         "laravel/homestead": "^6.1",
         "laravel/tinker": "~1.0",
